--- a/planmoto.htm
+++ b/planmoto.htm
@@ -12,6 +12,14 @@
     </head>
     <body ng-app="myApp">
             <h1>Bảo Hiểm xe máy</h1>
+            <nav aria-label="breadcrumb"ng-app="">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="#">Bảo hiểm phương tiện</a></li>
+                  <li class="breadcrumb-item"><a href="/planmoto.htm">Bảo hiểm xe máy</a></li>
+                  <li class="breadcrumb-item active"><a href="/plancar.htm">Bảo hiểm ô tô </a></li>
+                  <li class="breadcrumb-item active"><a href="/formpt.htm"> Đăng kí</a></li>
+                </ol>
+              </nav>
 <div class="container1">
     <div class="nav_product_page">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
