--- a/plan.html
+++ b/plan.html
@@ -23,7 +23,7 @@
     </li>
 
   </ul>
-  <div class="tab-content" id="pills-tabContent">
+  <div class="tab-content" id="pills-">
     <div class="tab-pane fade show active" id="pills-companyA" role="tabpanel" aria-labelledby="pills-home-tab">
       <div id="accordion">
         <div class="card">
